--- a/templates/advertisement/advertisement.html
+++ b/templates/advertisement/advertisement.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% extends 'base.html' %} {% load static %}
-{% block title %} Топ продавцов {% endblock %}
+{% block title %} Advertisement {% endblock %}
   <body>
     {% block content %}
     <ul class="nav nav-pills sticky-top bg-white nav-fill">
@@ -10,7 +10,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="{% url 'top-sellers' %}"
+        <a class="nav-link" href="{% url 'top-sellers' %}"
           ><span style="font-weight: bold">Топ продавцов</span>
         </a>
       </li>
@@ -35,47 +35,57 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="{% url 'logout' %}">
           <span style="font-weight: bold">Выйти</span>
         </a>
       </li>
     </ul>
-    <div class="row">
-      <div class="col" style="margin: 50px">
-        <div class="display-2">
-          <span class="badge bg-primary">Топ продавцов на сайте</span>
+
+    <div class="container" style="margin: 50px">
+      <div class="display-2">
+        <span class="badge bg-primary">Объявление пользователя "username"</span>
+      </div>
+    </div>
+    <div class="col offset-2">
+      <div class="card mb-2" style="max-width: 1200px; margin-top: 20px">
+        <div class="row g-0">
+          <div class="col-md-4">
+            <a href="#" class="nav-link">
+              <img
+                src="img/adv.png"
+                class="img-fluid rounded-start"
+                alt="Card title"
+              />
+            </a>
+          </div>
+          <div class="col">
+            <div class="card-body">
+              <h5 class="card-title">
+                <a href="#" class="nav-link"><strong>Продам гараж</strong></a>
+              </h5>
+              <p class="card-text">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Suscipit eum aut commodi dolores praesentium fugiat! Maxime
+                perspiciatis iste, voluptas tenetur voluptatem at beatae,
+                aliquid libero odit ab accusamus tempore assumenda. Hic
+                asperiores pariatur recusandae sapiente doloremque illo
+                laudantium placeat sed fugit! Dolorem nulla quaerat doloremque
+                odit impedit unde esse dolorum tenetur quos error! Iure quas,
+                illo expedita sed suscipit ullam. Illo quam odio, quas laborum
+                natus error doloremque totam maiores dolorum fugit aliquam, sit
+                numquam impedit praesentium facilis amet perspiciatis facere rem
+                magnam consectetur, nobis est. Qui quod fuga illum.
+              </p>
+              <span>Автор: "username"</span>
+              <p class="card-text">
+                <small class="text-muted">Размещено: "дата"</small>
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="container" style="min-height: 452px">
-      <ul class="list-group list-group-numbered">
-        <li
-          class="list-group-item d-flex justify-content-between align-items-start"
-        >
-          <div class="ms-2 me-auto">
-            <div class="fw-bold">Ваня</div>
-          </div>
-          <span class="badge bg-primary rounded-pill">2</span>
-        </li>
-        <li
-          class="list-group-item d-flex justify-content-between align-items-start"
-        >
-          <div class="ms-2 me-auto">
-            <div class="fw-bold">Петя</div>
-          </div>
-          <span class="badge bg-primary rounded-pill">3</span>
-        </li>
-        <li
-          class="list-group-item d-flex justify-content-between align-items-start"
-        >
-          <div class="ms-2 me-auto">
-            <div class="fw-bold">Гоша</div>
-          </div>
-          <span class="badge bg-primary rounded-pill">3</span>
-        </li>
-      </ul>
-    </div>
-    <footer style="padding: 100px" class="bg-primary">
+    <footer style="padding: 100px; min-height: 300px" class="bg-primary">
       <nav class="navbar navbar-expand-sm navbar-dark">
         <a class="navbar-brand" href="#">Добавьте</a>
         <button
