--- a/templates/auth/login.html
+++ b/templates/auth/login.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% extends 'base.html' %} {% load static %}
-{% block title %} Регистрация {% endblock %}
+{% block title %} Вход {% endblock %}
   <body>
     {% block content %}
     <ul class="nav nav-pills sticky-top bg-white nav-fill">
@@ -20,12 +20,12 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="{% url 'register' %}">
+        <a class="nav-link" href="{% url 'register' %}">
           <span style="font-weight: bold">Регистрация</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'login' %}">
+        <a class="nav-link active" aria-current="page" href="{% url 'login' %}">
           <span style="font-weight: bold">Войти</span>
         </a>
       </li>
@@ -35,43 +35,27 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="{% url 'logout' %}">
           <span style="font-weight: bold">Выйти</span>
         </a>
       </li>
     </ul>
     <div class="container">
       <div class="row">
-        <div class="col" style="margin: 50px">
+        <div class="col-8" style="margin: 50px">
           <div class="display-2">
             <span class="badge bg-primary"
-              >Страница регистрации пользователя</span
+              >Страница авторизации пользователя</span
             >
           </div>
         </div>
       </div>
-      <form method="post">
+      <form method="post"> {% csrf_token %}
         <div class="row mb-3">
           <div class="col">
             <label class="col-sm-4 col-form-label offset-4">Username</label>
             <div class="col-sm-4 offset-4 w-25">
-              <input type="text" class="form-control form-control-lg" />
-            </div>
-          </div>
-        </div>
-        <div class="row mb-3">
-          <div class="col">
-            <label class="col-sm-4 col-form-label offset-4">Name</label>
-            <div class="col-sm-4 offset-4 w-25">
-              <input type="text" class="form-control form-control-lg" />
-            </div>
-          </div>
-        </div>
-        <div class="row mb-3">
-          <div class="col">
-            <label class="col-sm-4 col-form-label offset-4">Surname</label>
-            <div class="col-sm-4 offset-4 w-25">
-              <input type="text" class="form-control form-control-lg" />
+              <input type="text" name="username" class="form-control form-control-lg" />
             </div>
           </div>
         </div>
@@ -79,20 +63,7 @@
           <div class="col">
             <label class="col-sm-4 col-form-label offset-4">Password</label>
             <div class="col-sm-4 offset-4 w-25">
-              <input type="password" class="form-control form-control-lg" />
-            </div>
-          </div>
-        </div>
-        <div class="row mb-3">
-          <div class="col">
-            <label class="col-sm-4 col-form-label offset-4"
-              >Password confirmation</label
-            >
-            <div class="col-sm-4 offset-4 w-25">
-              <input type="password" class="form-control form-control-lg" />
-              <div class="form-label bg-warning" style="margin: 10px 0px">
-                Ошибка (если будет)
-              </div>
+              <input type="password" name="password" class="form-control form-control-lg" />
             </div>
           </div>
         </div>
@@ -103,7 +74,7 @@
         </div>
       </form>
     </div>
-    {% endblock %}
     <script src="js/bootstrap.bundle.min.js"></script>
+    {% endblock %}
   </body>
 </html>
