--- a/templates/auth/profile.html
+++ b/templates/auth/profile.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 {% extends 'base.html' %} {% load static %}
-{% block title %} Advertisement-post {% endblock %}
+{% block title %} Профиль {% endblock %}
   <body>
     {% block content %}
     <ul class="nav nav-pills sticky-top bg-white nav-fill">
@@ -15,7 +15,7 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" aria-current="page" href="{% url 'adv_post' %}">
+        <a class="nav-link" href="{% url 'adv_post' %}">
           <span style="font-weight: bold">Разместить объявление</span>
         </a>
       </li>
@@ -30,45 +30,22 @@
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="{% url 'profile' %}">
+        <a class="nav-link active" aria-current="page" href="{% url 'profile' %}">
           <span style="font-weight: bold">Профиль</span>
         </a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">
+        <a class="nav-link" href="{% url 'logout' %}">
           <span style="font-weight: bold">Выйти</span>
         </a>
       </li>
     </ul>
-    <div class="row">
-      <div class="col" style="margin: 50px">
-        <div class="display-2">
-          <span class="badge bg-primary"
-            >Сообщите миру об этом в этой форме</span
-          >
-        </div>
+    <div class="col" style="margin: 50px">
+      <div class="display-2">
+        <span class="badge bg-primary"
+          >Сейчас вы находитесь на сайте под ником {{ user }}.</span
+        >
       </div>
-    </div>
-    <div class="container">
-
-      <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-
-        <div class="row mb-3">
-          <div class="col">
-            
-            <div class="col-sm-4 offset-4 w-25">
-                {{form.as_p}}
-            </div>
-          </div>
-        </div>
-
-        <div class="row mb-3 offset-sm-5">
-          <div class="col">
-            <button type="submit" class="btn btn-success">Принять</button>
-          </div>
-        </div>
-      </form>
     </div>
     {% endblock %}
     <script src="js/bootstrap.bundle.min.js"></script>
